[package]
name = "twine_spec_rng"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "twine_rng_tool"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = []
bin = ["dep:tokio", "dep:hex", "twine_protocol/http"]

[dependencies]
twine_protocol = { version = "0.1.0", features = ["build"] }
tokio = { version = "1.44.1", features = ["full"], optional = true }
hex = { version = "0.4", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.140"
twine_protocol = { version = "0.1.0", features = ["build", "rsa"] }
